<resources>
    <string name="app_name">Eatfast</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">Agregar</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mensaje_error_vacio">Digite la información faltante</string>
    <string name="mensaje_persona_guardada">Restaurante guardada exitosamente!</string>
    <string name="mensaje_plato_guardado">Plato guardado exitosamente!</string>
    <string name="mensaje_seleccion_imagen">seleccione la imagen</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensaje_error_cedula_existente">Cédula existente</string>
    <string name="mensaje_persona_modificada_exitosamente">Persona Modificada Exitosamente</string>
    <string name="mensaje_ventana_eliminar">¿Desea eliminar esta persona?</string>
    <string name="opcion_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="digite_contraseña">Digite contraseña</string>
    <string name="digite_usuario">Digite usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_crear_restautantes">CrearRestautantes</string>
    <string name="nit">Nit</string>
    <string name="nombre_restaurante">Nombre restaurante</string>
    <string name="nombrePlato">Nombre del plato</string>
    <string name="precio">Precio</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="title_activity_principal_usuarios">PrincipalUsuarios</string>
    <string name="title_activity_listar_platos">listarPlatos</string>

</resources>
